// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get filtered rows of dataset with all types of operators 1`] = `
[
  [
    "CDISCPILOT01",
    "01-701-1047",
    "1047",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-02-12",
    "2013-03-09",
    26,
    0,
    0,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    30.4,
    ">=30",
    148.6,
    67.1,
    8,
    "2009-07-26",
    42,
    ">=12",
    "2013-01-22",
    "2013-02-12",
    "2013-03-29",
    6,
    "2013-03-29",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-701-1115",
    "1115",
    "701",
    "701",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-11-30",
    "2013-01-23",
    55,
    54,
    2970,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    23.9,
    "<25",
    181.6,
    78.9,
    12,
    "2004-05-28",
    101.9,
    ">=12",
    "2012-11-23",
    "2012-11-30",
    "2013-01-23",
    8,
    "2013-01-23",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-701-1118",
    "1118",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-03-12",
    "2014-09-09",
    182,
    0,
    0,
    52,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    21.9,
    "<25",
    180.3,
    71.2,
    14,
    "2010-06-24",
    44.2,
    ">=12",
    "2014-02-27",
    "2014-03-12",
    "2014-09-09",
    12,
    "2014-09-09",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-701-1130",
    "1130",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-02-15",
    "2014-08-16",
    183,
    0,
    0,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    27.6,
    "25-<30",
    169.7,
    79.4,
    12,
    "2010-05-22",
    44.7,
    ">=12",
    "2014-02-09",
    "2014-02-15",
    "2014-08-16",
    12,
    "2014-08-16",
    "COMPLETED",
    "COMPLETED",
    "",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-701-1148",
    "1148",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-08-23",
    "2014-02-20",
    182,
    77.1,
    14040,
    57,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    28.3,
    "25-<30",
    175.3,
    87.1,
    15,
    "2010-12-12",
    32.1,
    ">=12",
    "2013-08-14",
    "2013-08-23",
    "2014-02-20",
    12,
    "2014-02-20",
    "COMPLETED",
    "COMPLETED",
    "",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-701-1180",
    "1180",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-02-12",
    "2013-03-18",
    35,
    70.2,
    2457,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    27.6,
    "25-<30",
    180.3,
    89.8,
    16,
    "2008-09-21",
    52.3,
    ">=12",
    "2013-01-28",
    "2013-02-12",
    "2013-03-23",
    7,
    "2013-03-23",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-701-1239",
    "1239",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2014-01-11",
    "2014-07-10",
    181,
    76.8,
    13905,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "M",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    33.6,
    ">=30",
    168.9,
    95.9,
    11,
    "2003-09-23",
    123.2,
    ">=12",
    "2013-12-28",
    "2014-01-11",
    "2014-07-11",
    12,
    "2014-07-11",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-701-1287",
    "1287",
    "701",
    "701",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2014-01-25",
    "2014-07-26",
    183,
    76.3,
    13959,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    23.5,
    "<25",
    154.9,
    56.3,
    14,
    "2009-10-30",
    50.6,
    ">=12",
    "2014-01-17",
    "2014-01-25",
    "2014-07-26",
    12,
    "2014-07-26",
    "COMPLETED",
    "COMPLETED",
    "",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-701-1341",
    "1341",
    "701",
    "701",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-01-05",
    "2013-01-26",
    22,
    54,
    1188,
    51,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    28.5,
    "25-<30",
    157.5,
    70.8,
    24,
    "2006-06-05",
    78.6,
    ">=12",
    "2012-12-22",
    "2013-01-05",
    "2013-02-07",
    5,
    "2013-02-07",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-701-1387",
    "1387",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-03-12",
    "2014-03-25",
    14,
    0,
    0,
    87,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    22.5,
    "<25",
    162.6,
    59.4,
    12,
    "2003-08-17",
    126.3,
    ">=12",
    "2014-02-23",
    "2014-03-12",
    "2014-03-25",
    4,
    "2014-03-25",
    "PROTOCOL VIOLATION",
    "DISCONTINUED",
    "Protocol Violation",
    11,
  ],
  [
    "CDISCPILOT01",
    "01-701-1415",
    "1415",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-09-23",
    "2014-03-24",
    183,
    0,
    0,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    25,
    "25-<30",
    175.3,
    76.7,
    10,
    "1998-06-13",
    183.1,
    ">=12",
    "2013-09-15",
    "2013-09-23",
    "2014-03-24",
    12,
    "2014-03-24",
    "COMPLETED",
    "COMPLETED",
    "",
    18,
  ],
  [
    "CDISCPILOT01",
    "01-701-1429",
    "1429",
    "701",
    "701",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-03-19",
    "2013-04-30",
    43,
    54,
    2322,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    25.7,
    "25-<30",
    148.6,
    56.7,
    12,
    "2008-06-17",
    56.3,
    ">=12",
    "2013-02-25",
    "2013-03-19",
    "2013-04-30",
    7,
    "2013-04-30",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    17,
  ],
  [
    "CDISCPILOT01",
    "01-701-1442",
    "1442",
    "701",
    "701",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-10-26",
    "2014-04-26",
    183,
    54,
    9882,
    57,
    "<65",
    1,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    40.1,
    ">=30",
    162.6,
    106.1,
    12,
    "2006-02-20",
    91.9,
    ">=12",
    "2013-10-17",
    "2013-10-26",
    "2014-04-26",
    12,
    "2014-04-26",
    "COMPLETED",
    "COMPLETED",
    "",
    15,
  ],
  [
    "CDISCPILOT01",
    "01-702-1082",
    "1082",
    "702",
    "900",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-07-26",
    "2013-10-13",
    80,
    54,
    4320,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    null,
    "<25",
    154.9,
    null,
    18,
    "2007-05-17",
    73.6,
    ">=12",
    "2013-07-03",
    "2013-07-26",
    "2013-11-17",
    9,
    "2013-11-17",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-703-1100",
    "1100",
    "703",
    "703",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-03-13",
    "2013-09-14",
    186,
    0,
    0,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    21.8,
    "<25",
    167.6,
    61.2,
    8,
    "2010-12-02",
    26.9,
    ">=12",
    "2013-02-28",
    "2013-03-13",
    "2013-09-14",
    12,
    "2013-09-14",
    "COMPLETED",
    "COMPLETED",
    "",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-703-1182",
    "1182",
    "703",
    "703",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-10-17",
    "2013-12-11",
    56,
    54,
    3024,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    22.8,
    "<25",
    172.7,
    68,
    12,
    "2011-09-27",
    24.4,
    ">=12",
    "2013-10-08",
    "2013-10-17",
    "2013-12-12",
    8,
    "2013-12-12",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-703-1295",
    "1295",
    "703",
    "703",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-11-21",
    "2014-04-19",
    150,
    78.3,
    11745,
    88,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "",
    "",
    22.7,
    "<25",
    157.5,
    56.3,
    8,
    "2012-04-05",
    18.7,
    ">=12",
    "2013-10-24",
    "2013-11-21",
    "2014-05-19",
    11,
    "2014-05-19",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-704-1009",
    "1009",
    "704",
    "704",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-08-27",
    "2013-09-25",
    30,
    54,
    1620,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    20.8,
    "<25",
    179.1,
    66.7,
    16,
    "2009-02-03",
    54.5,
    ">=12",
    "2013-08-20",
    "2013-08-27",
    "2013-10-02",
    5,
    "2013-10-02",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-704-1127",
    "1127",
    "704",
    "704",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-10-02",
    "2014-03-31",
    181,
    0,
    0,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    15.1,
    "<25",
    165.1,
    41.1,
    12,
    "2008-09-11",
    60.2,
    ">=12",
    "2013-09-16",
    "2013-10-02",
    "2014-03-31",
    12,
    "2014-03-31",
    "COMPLETED",
    "COMPLETED",
    "",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-704-1233",
    "1233",
    "704",
    "704",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-03-21",
    "2013-07-14",
    116,
    0,
    0,
    87,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "",
    "",
    21.3,
    "<25",
    147.3,
    46.3,
    16,
    "2011-01-15",
    25.8,
    ">=12",
    "2013-03-08",
    "2013-03-21",
    "2013-07-14",
    11,
    "2013-07-14",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    15,
  ],
  [
    "CDISCPILOT01",
    "01-704-1241",
    "1241",
    "704",
    "704",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-08-25",
    "2013-10-09",
    46,
    74,
    3402,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    25.2,
    "25-<30",
    170.2,
    73,
    14,
    "2011-07-25",
    24.7,
    ">=12",
    "2013-08-14",
    "2013-08-25",
    "2013-10-31",
    8,
    "2013-10-31",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-704-1266",
    "1266",
    "704",
    "704",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-10-13",
    "2013-12-06",
    55,
    73.6,
    4050,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    29.2,
    "25-<30",
    174,
    88.5,
    12,
    "2011-12-02",
    22.1,
    ">=12",
    "2013-10-05",
    "2013-10-13",
    "2013-12-06",
    8,
    "2013-12-06",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-705-1031",
    "1031",
    "705",
    "705",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-11-27",
    "2014-05-11",
    166,
    54,
    8964,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    28.9,
    "25-<30",
    157.5,
    71.7,
    16,
    "2010-11-25",
    35.8,
    ">=12",
    "2013-11-17",
    "2013-11-27",
    "2014-05-11",
    12,
    "2014-05-11",
    "LOST TO FOLLOW-UP",
    "DISCONTINUED",
    "Lost to Follow-up",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-705-1186",
    "1186",
    "705",
    "705",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-01-08",
    "2014-01-26",
    19,
    0,
    0,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    19.7,
    "<25",
    142.2,
    39.9,
    12,
    "2011-07-03",
    30.1,
    ">=12",
    "2014-01-03",
    "2014-01-08",
    "2014-02-07",
    5,
    "2014-02-07",
    "PHYSICIAN DECISION",
    "DISCONTINUED",
    "Physician Decision",
    15,
  ],
  [
    "CDISCPILOT01",
    "01-705-1199",
    "1199",
    "705",
    "705",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-09-16",
    "2013-09-28",
    13,
    54,
    702,
    87,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    24.8,
    "<25",
    161.3,
    64.4,
    20,
    "2007-09-08",
    72.1,
    ">=12",
    "2013-09-11",
    "2013-09-16",
    "2013-09-29",
    4,
    "2013-09-29",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-705-1280",
    "1280",
    "705",
    "705",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2014-01-17",
    "2014-07-25",
    190,
    76.9,
    14607,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    28,
    "25-<30",
    157.5,
    69.4,
    12,
    "2013-01-04",
    12.3,
    ">=12",
    "2014-01-11",
    "2014-01-17",
    "2014-07-25",
    12,
    "2014-07-25",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-705-1292",
    "1292",
    "705",
    "705",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-10-14",
    "2014-05-13",
    212,
    54,
    11448,
    60,
    "<65",
    1,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    26.8,
    "25-<30",
    167.6,
    75.3,
    8,
    "2012-09-28",
    12.5,
    ">=12",
    "2013-10-11",
    "2013-10-14",
    "2014-05-14",
    12,
    "2014-05-14",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-705-1349",
    "1349",
    "705",
    "705",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-03-10",
    "2013-09-08",
    183,
    0,
    0,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    21.2,
    "<25",
    144.8,
    44.5,
    10,
    "2007-03-23",
    71.2,
    ">=12",
    "2013-02-24",
    "2013-03-10",
    "2013-09-08",
    12,
    "2013-09-08",
    "COMPLETED",
    "COMPLETED",
    "",
    15,
  ],
  [
    "CDISCPILOT01",
    "01-705-1382",
    "1382",
    "705",
    "705",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-05-13",
    "2013-05-13",
    1,
    54,
    54,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    33.2,
    ">=30",
    170.2,
    96.2,
    12,
    "2012-05-03",
    12.2,
    ">=12",
    "2013-05-09",
    "2013-05-13",
    "2013-05-13",
    4,
    "2013-05-13",
    "PROTOCOL VIOLATION",
    "DISCONTINUED",
    "I/E Not Met",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-705-1393",
    "1393",
    "705",
    "705",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-09-07",
    "2013-02-01",
    148,
    54,
    7992,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    26.9,
    "25-<30",
    144.8,
    56.3,
    13,
    "2004-09-08",
    95.8,
    ">=12",
    "2012-09-02",
    "2012-09-07",
    "2013-02-20",
    11,
    "2013-02-20",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-706-1049",
    "1049",
    "706",
    "900",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-05-14",
    "2013-06-18",
    36,
    69.8,
    2511,
    60,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    20.6,
    "<25",
    167.6,
    57.8,
    11,
    "2010-05-02",
    36,
    ">=12",
    "2013-04-30",
    "2013-05-14",
    "2013-06-25",
    7,
    "2013-06-25",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-708-1236",
    "1236",
    "708",
    "708",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-09-21",
    "2013-09-21",
    1,
    54,
    54,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    23.4,
    "<25",
    152.4,
    54.4,
    8,
    "2012-09-08",
    12,
    ">=12",
    "2013-09-08",
    "2013-09-21",
    "2013-09-26",
    4,
    "2013-09-26",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-708-1272",
    "1272",
    "708",
    "708",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-02-06",
    "2013-03-22",
    45,
    54,
    2430,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    24.9,
    "<25",
    172.7,
    74.4,
    11,
    "2006-08-07",
    77.6,
    ">=12",
    "2013-01-22",
    "2013-02-06",
    "2013-04-04",
    8,
    "2013-04-04",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    15,
  ],
  [
    "CDISCPILOT01",
    "01-708-1296",
    "1296",
    "708",
    "708",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-06-14",
    "2013-12-12",
    182,
    0,
    0,
    57,
    "<65",
    1,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    27.9,
    "25-<30",
    170.2,
    80.7,
    18,
    "2010-02-03",
    40.1,
    ">=12",
    "2013-06-07",
    "2013-06-14",
    "2013-12-12",
    12,
    "2013-12-12",
    "COMPLETED",
    "COMPLETED",
    "",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-708-1342",
    "1342",
    "708",
    "708",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2012-12-29",
    "2013-06-28",
    182,
    0,
    0,
    59,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    20.4,
    "<25",
    170.2,
    59,
    13,
    "2010-09-24",
    26.9,
    ">=12",
    "2012-12-21",
    "2012-12-29",
    "2013-06-28",
    12,
    "2013-06-28",
    "COMPLETED",
    "COMPLETED",
    "",
    18,
  ],
  [
    "CDISCPILOT01",
    "01-708-1353",
    "1353",
    "708",
    "708",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-07-04",
    "2013-08-28",
    56,
    54,
    3024,
    87,
    ">80",
    3,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    20.3,
    "<25",
    157.5,
    50.4,
    16,
    "2010-08-06",
    34.4,
    ">=12",
    "2013-06-17",
    "2013-07-04",
    "2013-09-10",
    8,
    "2013-09-10",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-708-1372",
    "1372",
    "708",
    "708",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-04-12",
    "2013-04-19",
    8,
    54,
    432,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    30.7,
    ">=30",
    170.2,
    88.9,
    8,
    "2007-09-17",
    66.6,
    ">=12",
    "2013-04-03",
    "2013-04-12",
    "2013-05-10",
    4,
    "2013-05-10",
    "PROTOCOL VIOLATION",
    "DISCONTINUED",
    "I/E Not Met",
    17,
  ],
  [
    "CDISCPILOT01",
    "01-708-1428",
    "1428",
    "708",
    "708",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-11-09",
    "2013-12-14",
    36,
    54,
    1944,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    23.8,
    "<25",
    157.5,
    59,
    8,
    "2010-10-27",
    36.2,
    ">=12",
    "2013-11-02",
    "2013-11-09",
    "2014-01-31",
    8,
    "2014-01-31",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-709-1007",
    "1007",
    "709",
    "709",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-07-31",
    "2012-08-28",
    29,
    54,
    1566,
    54,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    23.8,
    "<25",
    158.8,
    59.9,
    21,
    "2007-02-28",
    64.8,
    ">=12",
    "2012-07-21",
    "2012-07-31",
    "2012-09-01",
    5,
    "2012-09-01",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    10,
  ],
  [
    "CDISCPILOT01",
    "01-709-1029",
    "1029",
    "709",
    "709",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2012-12-25",
    "2013-06-26",
    184,
    76.6,
    14094,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    23.1,
    "<25",
    172.7,
    69,
    20,
    "2009-06-02",
    42.3,
    ">=12",
    "2012-12-10",
    "2012-12-25",
    "2013-06-26",
    12,
    "2013-06-26",
    "COMPLETED",
    "COMPLETED",
    "",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-709-1081",
    "1081",
    "709",
    "709",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2014-01-18",
    "2014-04-27",
    100,
    54,
    5400,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    23.5,
    "<25",
    154.9,
    56.5,
    9,
    "2011-08-06",
    29.2,
    ">=12",
    "2014-01-09",
    "2014-01-18",
    "2014-05-10",
    10,
    "2014-05-10",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-709-1259",
    "1259",
    "709",
    "709",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-01-26",
    "2013-06-13",
    139,
    0,
    0,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "",
    "",
    21.9,
    "<25",
    172.7,
    65.3,
    18,
    "2008-08-06",
    53.3,
    ">=12",
    "2013-01-13",
    "2013-01-26",
    "2013-06-13",
    11,
    "2013-06-13",
    "LACK OF EFFICACY",
    "DISCONTINUED",
    "Lack of Efficacy",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-709-1285",
    "1285",
    "709",
    "709",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-03-24",
    "2013-05-23",
    61,
    54,
    3294,
    87,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    23.1,
    "<25",
    167.6,
    64.9,
    6,
    "2009-09-18",
    42,
    ">=12",
    "2013-03-17",
    "2013-03-24",
    "2013-05-31",
    9,
    "2013-05-31",
    "STUDY TERMINATED BY SPONSOR",
    "DISCONTINUED",
    "Sponsor Decision",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-709-1306",
    "1306",
    "709",
    "709",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-02-03",
    "2014-06-16",
    134,
    0,
    0,
    60,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    18.5,
    "<25",
    154.9,
    44.5,
    12,
    "2009-02-02",
    59.6,
    ">=12",
    "2014-01-19",
    "2014-02-03",
    "2014-06-25",
    11,
    "2014-06-25",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-710-1002",
    "1002",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2014-01-14",
    "2014-01-18",
    5,
    54,
    270,
    88,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    25.8,
    "25-<30",
    165.1,
    70.3,
    12,
    "2008-01-08",
    71.8,
    ">=12",
    "2013-12-30",
    "2014-01-14",
    "2014-01-18",
    4,
    "2014-01-18",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    17,
  ],
  [
    "CDISCPILOT01",
    "01-710-1027",
    "1027",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-02-28",
    "2014-08-29",
    183,
    0,
    0,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    24.4,
    "<25",
    170.2,
    70.8,
    12,
    "2012-02-04",
    24,
    ">=12",
    "2014-02-03",
    "2014-02-28",
    "2014-08-29",
    12,
    "2014-08-29",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-710-1045",
    "1045",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-06-03",
    "2013-08-13",
    72,
    54,
    3888,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    22,
    "<25",
    162.6,
    58.1,
    12,
    "2010-05-12",
    36.3,
    ">=12",
    "2013-05-20",
    "2013-06-03",
    "2013-08-17",
    9,
    "2013-08-17",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    14,
  ],
  [
    "CDISCPILOT01",
    "01-710-1053",
    "1053",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-12-26",
    "2013-02-10",
    47,
    54,
    2538,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    20.8,
    "<25",
    157.5,
    51.7,
    12,
    "2011-11-04",
    13.4,
    ">=12",
    "2012-12-15",
    "2012-12-26",
    "2013-02-15",
    8,
    "2013-02-15",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-710-1060",
    "1060",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-01-01",
    "2013-07-05",
    186,
    0,
    0,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    21,
    "<25",
    182.9,
    70.3,
    16,
    "2010-09-14",
    27.4,
    ">=12",
    "2012-12-24",
    "2013-01-01",
    "2013-07-05",
    12,
    "2013-07-05",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-710-1070",
    "1070",
    "710",
    "710",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2012-09-08",
    "2013-01-22",
    137,
    78,
    10692,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    21.8,
    "<25",
    149.9,
    49,
    10,
    "2010-09-08",
    23.7,
    ">=12",
    "2012-08-28",
    "2012-09-08",
    "2013-02-23",
    11,
    "2013-02-23",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    10,
  ],
  [
    "CDISCPILOT01",
    "01-710-1083",
    "1083",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-07-22",
    "2013-08-01",
    11,
    0,
    0,
    89,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "Y",
    19,
    "<25",
    157.5,
    47.2,
    14,
    "2011-07-19",
    23.7,
    ">=12",
    "2013-07-09",
    "2013-07-22",
    "2013-08-03",
    4,
    "2013-08-03",
    "DEATH",
    "DISCONTINUED",
    "Death",
    14,
  ],
  [
    "CDISCPILOT01",
    "01-710-1154",
    "1154",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2014-03-29",
    "2014-04-27",
    30,
    54,
    1620,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    32.3,
    ">=30",
    160,
    82.6,
    3,
    "2008-02-25",
    72.4,
    ">=12",
    "2014-03-08",
    "2014-03-29",
    "2014-05-09",
    7,
    "2014-05-09",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    13,
  ],
  [
    "CDISCPILOT01",
    "01-710-1235",
    "1235",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-09-26",
    "2013-03-27",
    183,
    54,
    9882,
    56,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    33,
    ">=30",
    170.2,
    95.7,
    16,
    "2009-12-03",
    33.4,
    ">=12",
    "2012-09-13",
    "2012-09-26",
    "2013-03-27",
    12,
    "2013-03-27",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-710-1270",
    "1270",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2014-02-12",
    "2014-03-01",
    18,
    54,
    972,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    25.6,
    "25-<30",
    149.9,
    57.6,
    12,
    "2012-06-19",
    19.5,
    ">=12",
    "2014-02-01",
    "2014-02-12",
    "2014-03-01",
    4,
    "2014-03-01",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    11,
  ],
  [
    "CDISCPILOT01",
    "01-710-1271",
    "1271",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2012-09-27",
    "2012-11-21",
    56,
    0,
    0,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    21.2,
    "<25",
    149.9,
    47.6,
    16,
    "2011-09-05",
    12,
    ">=12",
    "2012-09-04",
    "2012-09-27",
    "2012-12-02",
    8,
    "2012-12-02",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    18,
  ],
  [
    "CDISCPILOT01",
    "01-710-1315",
    "1315",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-02-27",
    "2013-07-06",
    130,
    0,
    0,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    24.2,
    "<25",
    152.4,
    56.3,
    12,
    "2011-08-20",
    17.8,
    ">=12",
    "2013-02-12",
    "2013-02-27",
    "2013-07-16",
    11,
    "2013-07-16",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    12,
  ],
  [
    "CDISCPILOT01",
    "01-710-1358",
    "1358",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-09-17",
    "2013-02-09",
    146,
    54,
    7884,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    31.1,
    ">=30",
    162.6,
    82.1,
    6,
    "2009-08-29",
    36.2,
    ">=12",
    "2012-09-02",
    "2012-09-17",
    "2013-03-12",
    12,
    "2013-03-12",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    13,
  ],
  [
    "CDISCPILOT01",
    "01-710-1368",
    "1368",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-10-23",
    "2014-04-24",
    184,
    0,
    0,
    88,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    15.7,
    "<25",
    147.3,
    34,
    12,
    "2011-10-12",
    24.3,
    ">=12",
    "2013-10-21",
    "2013-10-23",
    "2014-04-24",
    12,
    "2014-04-24",
    "COMPLETED",
    "COMPLETED",
    "",
    13,
  ],
  [
    "CDISCPILOT01",
    "01-711-1433",
    "1433",
    "711",
    "900",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-01-27",
    "2013-02-05",
    10,
    54,
    540,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    20.9,
    "<25",
    157.5,
    51.9,
    12,
    "2012-02-02",
    11.7,
    "<12",
    "2013-01-23",
    "2013-01-27",
    "2013-02-06",
    4,
    "2013-02-06",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    18,
  ],
  [
    "CDISCPILOT01",
    "01-714-1035",
    "1035",
    "714",
    "900",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-04-17",
    "2014-10-16",
    183,
    0,
    0,
    88,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    24.6,
    "<25",
    148.6,
    54.4,
    12,
    "2011-04-02",
    36.1,
    ">=12",
    "2014-04-03",
    "2014-04-17",
    "2014-10-16",
    12,
    "2014-10-16",
    "COMPLETED",
    "COMPLETED",
    "",
    17,
  ],
  [
    "CDISCPILOT01",
    "01-715-1155",
    "1155",
    "715",
    "900",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-12-13",
    "2014-01-25",
    44,
    0,
    0,
    59,
    "<65",
    1,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    23.3,
    "<25",
    165.1,
    63.5,
    12,
    "2010-12-09",
    35.7,
    ">=12",
    "2013-11-29",
    "2013-12-13",
    "2014-04-26",
    7,
    "2014-04-26",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    10,
  ],
  [
    "CDISCPILOT01",
    "01-716-1024",
    "1024",
    "716",
    "716",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2012-07-09",
    "2013-01-20",
    196,
    0,
    0,
    87,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    22.7,
    "<25",
    154.9,
    54.4,
    12,
    "2011-12-01",
    7.2,
    "<12",
    "2012-07-06",
    "2012-07-09",
    "2013-01-20",
    12,
    "2013-01-20",
    "COMPLETED",
    "COMPLETED",
    "",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-716-1030",
    "1030",
    "716",
    "716",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-12-28",
    "2014-01-02",
    6,
    54,
    324,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    33.2,
    ">=30",
    150.6,
    75.3,
    12,
    "2011-09-06",
    27.7,
    ">=12",
    "2013-12-25",
    "2013-12-28",
    "2014-01-10",
    4,
    "2014-01-10",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-716-1094",
    "1094",
    "716",
    "716",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-12-19",
    "2013-01-24",
    37,
    54,
    1998,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    28.3,
    "25-<30",
    168.9,
    80.7,
    8,
    "2007-12-28",
    59.7,
    ">=12",
    "2012-12-16",
    "2012-12-19",
    "2013-01-26",
    7,
    "2013-01-26",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    11,
  ],
  [
    "CDISCPILOT01",
    "01-716-1108",
    "1108",
    "716",
    "716",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-02-12",
    "2013-08-10",
    180,
    0,
    0,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    26,
    "25-<30",
    142.2,
    52.6,
    12,
    "2012-02-14",
    11.7,
    "<12",
    "2013-02-04",
    "2013-02-12",
    "2013-08-10",
    12,
    "2013-08-10",
    "COMPLETED",
    "COMPLETED",
    "",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-716-1151",
    "1151",
    "716",
    "716",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-02-01",
    "2013-05-11",
    100,
    54,
    5400,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    19.7,
    "<25",
    152.4,
    45.8,
    18,
    "2010-03-17",
    34.3,
    ">=12",
    "2013-01-23",
    "2013-02-01",
    "2013-06-07",
    10,
    "2013-06-07",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-716-1157",
    "1157",
    "716",
    "716",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-10-02",
    "2014-04-04",
    185,
    54,
    9990,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    23.2,
    "<25",
    160,
    59.4,
    14,
    "2008-04-10",
    65.5,
    ">=12",
    "2013-09-23",
    "2013-10-02",
    "2014-04-05",
    12,
    "2014-04-05",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-716-1160",
    "1160",
    "716",
    "716",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-04-05",
    "2013-10-11",
    190,
    0,
    0,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    24.1,
    "<25",
    157.5,
    59.9,
    12,
    "2011-06-04",
    21.7,
    ">=12",
    "2013-03-23",
    "2013-04-05",
    "2013-10-11",
    12,
    "2013-10-11",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-716-1364",
    "1364",
    "716",
    "716",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-07-04",
    "2014-01-09",
    190,
    76.6,
    14553,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    20.4,
    "<25",
    162.6,
    54,
    12,
    "2010-08-10",
    34.6,
    ">=12",
    "2013-06-27",
    "2013-07-04",
    "2014-01-09",
    12,
    "2014-01-09",
    "COMPLETED",
    "COMPLETED",
    "",
    17,
  ],
  [
    "CDISCPILOT01",
    "01-716-1441",
    "1441",
    "716",
    "716",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-01-22",
    "2014-07-22",
    182,
    0,
    0,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    27.5,
    "25-<30",
    144.8,
    57.6,
    10,
    "2010-05-25",
    43.7,
    ">=12",
    "2014-01-13",
    "2014-01-22",
    "2014-07-22",
    12,
    "2014-07-22",
    "COMPLETED",
    "COMPLETED",
    "",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-717-1109",
    "1109",
    "717",
    "900",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2014-01-27",
    "2014-07-28",
    183,
    77.3,
    14148,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    13.7,
    "<25",
    180.3,
    44.5,
    17,
    "2012-03-11",
    22.4,
    ">=12",
    "2014-01-20",
    "2014-01-27",
    "2014-07-28",
    12,
    "2014-07-28",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-717-1201",
    "1201",
    "717",
    "900",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-12-19",
    "2014-02-21",
    65,
    0,
    0,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    26.6,
    "25-<30",
    160,
    68,
    12,
    "2011-03-23",
    32.7,
    ">=12",
    "2013-12-12",
    "2013-12-19",
    "2014-02-21",
    8,
    "2014-02-21",
    "LACK OF EFFICACY",
    "DISCONTINUED",
    "Lack of Efficacy",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-718-1101",
    "1101",
    "718",
    "718",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-02-17",
    "2013-07-31",
    165,
    78.5,
    12960,
    82,
    ">80",
    3,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    23.2,
    "<25",
    186.2,
    80.3,
    12,
    "2008-04-14",
    57.7,
    ">=12",
    "2013-02-01",
    "2013-02-17",
    "2013-08-02",
    12,
    "2013-08-02",
    "STUDY TERMINATED BY SPONSOR",
    "DISCONTINUED",
    "Sponsor Decision",
    13,
  ],
  [
    "CDISCPILOT01",
    "01-718-1250",
    "1250",
    "718",
    "718",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-09-21",
    "2014-01-31",
    133,
    54,
    7182,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "F",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    23.6,
    "<25",
    157.5,
    58.5,
    21,
    "2008-08-20",
    60.1,
    ">=12",
    "2013-08-21",
    "2013-09-21",
    "2014-02-08",
    11,
    "2014-02-08",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    18,
  ],
  [
    "CDISCPILOT01",
    "01-718-1328",
    "1328",
    "718",
    "718",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-02-01",
    "2013-04-18",
    77,
    76.1,
    5859,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    21.9,
    "<25",
    170.2,
    63.5,
    12,
    "2010-01-11",
    36.6,
    ">=12",
    "2013-01-28",
    "2013-02-01",
    "2013-05-01",
    9,
    "2013-05-01",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    13,
  ],
]
`;

exports[`Get filtered rows of dataset with simple "and" filter 1`] = `
[
  [
    "CDISCPILOT01",
    "01-701-1115",
    "1115",
    "701",
    "701",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-11-30",
    "2013-01-23",
    55,
    54,
    2970,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    23.9,
    "<25",
    181.6,
    78.9,
    12,
    "2004-05-28",
    101.9,
    ">=12",
    "2012-11-23",
    "2012-11-30",
    "2013-01-23",
    8,
    "2013-01-23",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-701-1130",
    "1130",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-02-15",
    "2014-08-16",
    183,
    0,
    0,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    27.6,
    "25-<30",
    169.7,
    79.4,
    12,
    "2010-05-22",
    44.7,
    ">=12",
    "2014-02-09",
    "2014-02-15",
    "2014-08-16",
    12,
    "2014-08-16",
    "COMPLETED",
    "COMPLETED",
    "",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-701-1415",
    "1415",
    "701",
    "701",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-09-23",
    "2014-03-24",
    183,
    0,
    0,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    25,
    "25-<30",
    175.3,
    76.7,
    10,
    "1998-06-13",
    183.1,
    ">=12",
    "2013-09-15",
    "2013-09-23",
    "2014-03-24",
    12,
    "2014-03-24",
    "COMPLETED",
    "COMPLETED",
    "",
    18,
  ],
  [
    "CDISCPILOT01",
    "01-703-1182",
    "1182",
    "703",
    "703",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-10-17",
    "2013-12-11",
    56,
    54,
    3024,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    22.8,
    "<25",
    172.7,
    68,
    12,
    "2011-09-27",
    24.4,
    ">=12",
    "2013-10-08",
    "2013-10-17",
    "2013-12-12",
    8,
    "2013-12-12",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-704-1009",
    "1009",
    "704",
    "704",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-08-27",
    "2013-09-25",
    30,
    54,
    1620,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    20.8,
    "<25",
    179.1,
    66.7,
    16,
    "2009-02-03",
    54.5,
    ">=12",
    "2013-08-20",
    "2013-08-27",
    "2013-10-02",
    5,
    "2013-10-02",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-704-1241",
    "1241",
    "704",
    "704",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-08-25",
    "2013-10-09",
    46,
    74,
    3402,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    25.2,
    "25-<30",
    170.2,
    73,
    14,
    "2011-07-25",
    24.7,
    ">=12",
    "2013-08-14",
    "2013-08-25",
    "2013-10-31",
    8,
    "2013-10-31",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-704-1266",
    "1266",
    "704",
    "704",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-10-13",
    "2013-12-06",
    55,
    73.6,
    4050,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    29.2,
    "25-<30",
    174,
    88.5,
    12,
    "2011-12-02",
    22.1,
    ">=12",
    "2013-10-05",
    "2013-10-13",
    "2013-12-06",
    8,
    "2013-12-06",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-704-1325",
    "1325",
    "704",
    "704",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2014-04-23",
    "2014-07-04",
    73,
    54,
    3942,
    81,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "",
    "",
    22.3,
    "<25",
    175.3,
    68.5,
    16,
    "2008-11-02",
    65.4,
    ">=12",
    "2014-04-16",
    "2014-04-23",
    "2014-08-06",
    10,
    "2014-08-06",
    "PROTOCOL VIOLATION",
    "DISCONTINUED",
    "Protocol Violation",
    18,
  ],
  [
    "CDISCPILOT01",
    "01-704-1388",
    "1388",
    "704",
    "704",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2012-12-07",
    "2013-06-11",
    187,
    0,
    0,
    81,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    18.8,
    "<25",
    176.5,
    58.5,
    11,
    "2010-10-26",
    25.1,
    ">=12",
    "2012-11-28",
    "2012-12-07",
    "2013-06-19",
    12,
    "2013-06-19",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-705-1199",
    "1199",
    "705",
    "705",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-09-16",
    "2013-09-28",
    13,
    54,
    702,
    87,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    24.8,
    "<25",
    161.3,
    64.4,
    20,
    "2007-09-08",
    72.1,
    ">=12",
    "2013-09-11",
    "2013-09-16",
    "2013-09-29",
    4,
    "2013-09-29",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-705-1382",
    "1382",
    "705",
    "705",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-05-13",
    "2013-05-13",
    1,
    54,
    54,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    33.2,
    ">=30",
    170.2,
    96.2,
    12,
    "2012-05-03",
    12.2,
    ">=12",
    "2013-05-09",
    "2013-05-13",
    "2013-05-13",
    4,
    "2013-05-13",
    "PROTOCOL VIOLATION",
    "DISCONTINUED",
    "I/E Not Met",
    19,
  ],
  [
    "CDISCPILOT01",
    "01-708-1272",
    "1272",
    "708",
    "708",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-02-06",
    "2013-03-22",
    45,
    54,
    2430,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    24.9,
    "<25",
    172.7,
    74.4,
    11,
    "2006-08-07",
    77.6,
    ">=12",
    "2013-01-22",
    "2013-02-06",
    "2013-04-04",
    8,
    "2013-04-04",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    15,
  ],
  [
    "CDISCPILOT01",
    "01-708-1372",
    "1372",
    "708",
    "708",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-04-12",
    "2013-04-19",
    8,
    54,
    432,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    30.7,
    ">=30",
    170.2,
    88.9,
    8,
    "2007-09-17",
    66.6,
    ">=12",
    "2013-04-03",
    "2013-04-12",
    "2013-05-10",
    4,
    "2013-05-10",
    "PROTOCOL VIOLATION",
    "DISCONTINUED",
    "I/E Not Met",
    17,
  ],
  [
    "CDISCPILOT01",
    "01-709-1029",
    "1029",
    "709",
    "709",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2012-12-25",
    "2013-06-26",
    184,
    76.6,
    14094,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    23.1,
    "<25",
    172.7,
    69,
    20,
    "2009-06-02",
    42.3,
    ">=12",
    "2012-12-10",
    "2012-12-25",
    "2013-06-26",
    12,
    "2013-06-26",
    "COMPLETED",
    "COMPLETED",
    "",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-709-1259",
    "1259",
    "709",
    "709",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-01-26",
    "2013-06-13",
    139,
    0,
    0,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "",
    "",
    21.9,
    "<25",
    172.7,
    65.3,
    18,
    "2008-08-06",
    53.3,
    ">=12",
    "2013-01-13",
    "2013-01-26",
    "2013-06-13",
    11,
    "2013-06-13",
    "LACK OF EFFICACY",
    "DISCONTINUED",
    "Lack of Efficacy",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-709-1285",
    "1285",
    "709",
    "709",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-03-24",
    "2013-05-23",
    61,
    54,
    3294,
    87,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    23.1,
    "<25",
    167.6,
    64.9,
    6,
    "2009-09-18",
    42,
    ">=12",
    "2013-03-17",
    "2013-03-24",
    "2013-05-31",
    9,
    "2013-05-31",
    "STUDY TERMINATED BY SPONSOR",
    "DISCONTINUED",
    "Sponsor Decision",
    16,
  ],
  [
    "CDISCPILOT01",
    "01-709-1339",
    "1339",
    "709",
    "709",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2012-12-23",
    "2013-06-24",
    184,
    0,
    0,
    81,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    25.4,
    "25-<30",
    175.3,
    78,
    16,
    "2010-03-03",
    33.5,
    ">=12",
    "2012-12-15",
    "2012-12-23",
    "2013-06-24",
    12,
    "2013-06-24",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-710-1002",
    "1002",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2014-01-14",
    "2014-01-18",
    5,
    54,
    270,
    88,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    25.8,
    "25-<30",
    165.1,
    70.3,
    12,
    "2008-01-08",
    71.8,
    ">=12",
    "2013-12-30",
    "2014-01-14",
    "2014-01-18",
    4,
    "2014-01-18",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    17,
  ],
  [
    "CDISCPILOT01",
    "01-710-1027",
    "1027",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-02-28",
    "2014-08-29",
    183,
    0,
    0,
    83,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    24.4,
    "<25",
    170.2,
    70.8,
    12,
    "2012-02-04",
    24,
    ">=12",
    "2014-02-03",
    "2014-02-28",
    "2014-08-29",
    12,
    "2014-08-29",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-710-1060",
    "1060",
    "710",
    "710",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2013-01-01",
    "2013-07-05",
    186,
    0,
    0,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    21,
    "<25",
    182.9,
    70.3,
    16,
    "2010-09-14",
    27.4,
    ">=12",
    "2012-12-24",
    "2013-01-01",
    "2013-07-05",
    12,
    "2013-07-05",
    "COMPLETED",
    "COMPLETED",
    "",
    23,
  ],
  [
    "CDISCPILOT01",
    "01-710-1154",
    "1154",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2014-03-29",
    "2014-04-27",
    30,
    54,
    1620,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    32.3,
    ">=30",
    160,
    82.6,
    3,
    "2008-02-25",
    72.4,
    ">=12",
    "2014-03-08",
    "2014-03-29",
    "2014-05-09",
    7,
    "2014-05-09",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    13,
  ],
  [
    "CDISCPILOT01",
    "01-710-1278",
    "1278",
    "710",
    "710",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2012-12-24",
    "2013-02-26",
    65,
    74.8,
    4860,
    81,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "Y",
    "",
    22.7,
    "<25",
    177.8,
    71.7,
    20,
    "2011-12-08",
    12.2,
    ">=12",
    "2012-12-13",
    "2012-12-24",
    "2013-03-03",
    9,
    "2013-03-03",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    14,
  ],
  [
    "CDISCPILOT01",
    "01-710-1358",
    "1358",
    "710",
    "710",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-09-17",
    "2013-02-09",
    146,
    54,
    7884,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    31.1,
    ">=30",
    162.6,
    82.1,
    6,
    "2009-08-29",
    36.2,
    ">=12",
    "2012-09-02",
    "2012-09-17",
    "2013-03-12",
    12,
    "2013-03-12",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    13,
  ],
  [
    "CDISCPILOT01",
    "01-714-1425",
    "1425",
    "714",
    "900",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-08-15",
    "2013-08-19",
    5,
    54,
    270,
    81,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "",
    "",
    29,
    "25-<30",
    177.8,
    91.6,
    16,
    "2010-07-30",
    36.4,
    ">=12",
    "2013-08-11",
    "2013-08-15",
    "2013-08-22",
    4,
    "2013-08-22",
    "STUDY TERMINATED BY SPONSOR",
    "DISCONTINUED",
    "Sponsor Decision",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-716-1094",
    "1094",
    "716",
    "716",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2012-12-19",
    "2013-01-24",
    37,
    54,
    1998,
    82,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "N",
    "Y",
    "Y",
    "",
    28.3,
    "25-<30",
    168.9,
    80.7,
    8,
    "2007-12-28",
    59.7,
    ">=12",
    "2012-12-16",
    "2012-12-19",
    "2013-01-26",
    7,
    "2013-01-26",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    11,
  ],
  [
    "CDISCPILOT01",
    "01-716-1157",
    "1157",
    "716",
    "716",
    "Xanomeline Low Dose",
    "Xanomeline Low Dose",
    54,
    "Xanomeline Low Dose",
    54,
    "2013-10-02",
    "2014-04-04",
    185,
    54,
    9990,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    23.2,
    "<25",
    160,
    59.4,
    14,
    "2008-04-10",
    65.5,
    ">=12",
    "2013-09-23",
    "2013-10-02",
    "2014-04-05",
    12,
    "2014-04-05",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-716-1189",
    "1189",
    "716",
    "716",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2012-10-09",
    "2013-02-27",
    142,
    78,
    11070,
    81,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "Y",
    "Y",
    "",
    27.4,
    "25-<30",
    163.8,
    73.5,
    9,
    "2008-08-19",
    49.6,
    ">=12",
    "2012-10-07",
    "2012-10-09",
    "2013-03-03",
    11,
    "2013-03-03",
    "ADVERSE EVENT",
    "DISCONTINUED",
    "Adverse Event",
    21,
  ],
  [
    "CDISCPILOT01",
    "01-716-1441",
    "1441",
    "716",
    "716",
    "Placebo",
    "Placebo",
    0,
    "Placebo",
    0,
    "2014-01-22",
    "2014-07-22",
    182,
    0,
    0,
    85,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    27.5,
    "25-<30",
    144.8,
    57.6,
    10,
    "2010-05-25",
    43.7,
    ">=12",
    "2014-01-13",
    "2014-01-22",
    "2014-07-22",
    12,
    "2014-07-22",
    "COMPLETED",
    "COMPLETED",
    "",
    22,
  ],
  [
    "CDISCPILOT01",
    "01-717-1109",
    "1109",
    "717",
    "900",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2014-01-27",
    "2014-07-28",
    183,
    77.3,
    14148,
    84,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    "",
    13.7,
    "<25",
    180.3,
    44.5,
    17,
    "2012-03-11",
    22.4,
    ">=12",
    "2014-01-20",
    "2014-01-27",
    "2014-07-28",
    12,
    "2014-07-28",
    "COMPLETED",
    "COMPLETED",
    "",
    20,
  ],
  [
    "CDISCPILOT01",
    "01-718-1101",
    "1101",
    "718",
    "718",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-02-17",
    "2013-07-31",
    165,
    78.5,
    12960,
    82,
    ">80",
    3,
    "YEARS",
    "BLACK OR AFRICAN AMERICAN",
    2,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "Y",
    "",
    "",
    23.2,
    "<25",
    186.2,
    80.3,
    12,
    "2008-04-14",
    57.7,
    ">=12",
    "2013-02-01",
    "2013-02-17",
    "2013-08-02",
    12,
    "2013-08-02",
    "STUDY TERMINATED BY SPONSOR",
    "DISCONTINUED",
    "Sponsor Decision",
    13,
  ],
  [
    "CDISCPILOT01",
    "01-718-1328",
    "1328",
    "718",
    "718",
    "Xanomeline High Dose",
    "Xanomeline High Dose",
    81,
    "Xanomeline High Dose",
    81,
    "2013-02-01",
    "2013-04-18",
    77,
    76.1,
    5859,
    86,
    ">80",
    3,
    "YEARS",
    "WHITE",
    1,
    "M",
    "NOT HISPANIC OR LATINO",
    "Y",
    "Y",
    "Y",
    "Y",
    "N",
    "N",
    "Y",
    "",
    "",
    21.9,
    "<25",
    170.2,
    63.5,
    12,
    "2010-01-11",
    36.6,
    ">=12",
    "2013-01-28",
    "2013-02-01",
    "2013-05-01",
    9,
    "2013-05-01",
    "WITHDRAWAL BY SUBJECT",
    "DISCONTINUED",
    "Withdrew Consent",
    13,
  ],
]
`;
